src/test/deca/context/invalid/intermediaire2/mots_reserves/14printx.deca
// Description:
// Test du mettre le mot réservé printx, en nom de variable.
//
// Resultats:
//  14printx.deca:10:8:
//
// Historique:
//    crée le 17/06/2022
{
    int printx;
}